fix(control): wrong scrollbar behavior in notifications

--- a/control/frontend/src/app.css
+++ b/control/frontend/src/app.css
@@ -26,7 +26,7 @@
 	}
 }
 
-main {
+html {
 	scrollbar-width: thin;
 	scrollbar-color: var(--color-stone-300) transparent;
 }
